# attn-as-bilinear-form

./: .gitignore  .pre-commit-config.yaml  .vale.ini  README.md  index.html  justfile  package.json  paper.typ  post.md  post.typ  pyproject.toml  refs.bib  robots.txt  search_index.en.js  sitemap.xml  style.css
.github/workflows/: deploy.yml  mlx.yml  test.yml
notebooks/: 01_bilinear_basics.py  02_attention_forward.py  03_softmax_gibbs.py  04_gradients.py  05_multihead.py  06_masking.py  07_hopfield.py  08_worked_examples.py
scripts/: fix_latex_escapes.py  fix_math_underscores.py  lint_latex.py
site/: config.toml
site/content/: _index.md
site/content/theory/: _index.md  attention.md  bilinear.md  efficient.md  einsum.md  gradients.md  multihead.md  positional.md  statistical.md
site/sass/: style.scss
site/templates/: base.html  index.html  page.html  section.html
site/templates/shortcodes/: math.html
src/attn_tensors/: __init__.py  attention.py  backend.py  bilinear.py  gradients.py  hopfield.py  masking.py  multihead.py  softmax.py  utils.py
tests/: conftest.py  test_attention.py  test_backend.py  test_benchmarks.py  test_bilinear.py  test_gradients.py  test_hopfield.py  test_integration.py  test_lint_latex.py  test_masking.py  test_multihead.py  test_softmax.py  test_utils.py
theory/: index.html
theory/attention/: index.html
theory/bilinear/: index.html
theory/efficient/: index.html
theory/einsum/: index.html
theory/gradients/: index.html
theory/multihead/: index.html
theory/positional/: index.html
theory/statistical/: index.html
