[project]
name = "attn-tensors"
version = "0.1.0"
description = "Attention as Bilinear Form - A Physicist's Guide"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "jax>=0.4.30",
    "jaxlib>=0.4.30",
    "mlx>=0.20.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "marimo>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/attn_tensors"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
